Remove deprecated new Float in PWFloatText
new Float() is deprecated and valueOf should be used